--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@astrojs/react": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/vercel": "^5.0.2",
+    "@supabase/supabase-js": "^2.38.0",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
-    "@supabase/supabase-js": "^2.38.0",
     "astro": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
